2007-10-20  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* gitps.c,term/gnuitrc.*.in: added RefreshAfterKill variable
	  (Default: ON), to autorefresh after signalling a process.
	* gitps.c: remove bogus code from kill_process().
	* */ChangeLog: added note to look here instead.

2007-10-19  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Renamed package to gnuit.
	* Renamed term/gitrc.* to gnuitrc.*

2007-10-03  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Manually expand variables in gitrc.common.IN
	  (sed in Makefile.am), otherwise they get expanded to (eg)
	  $(prefix)/share/doc/gnu-interactive-tools.
	* gitps:
	  + Added SIGSTKFLT to supported signals.
	  + Added numbers as key bindings to select signals.

2007-10-01  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Remove leading dot from system copy of config files.
	* Portability fixes (freebsd, amd64).
	* tilde.[ch] and history.[ch] were not getting included
	  when needed. Autotools weirdness, I suspect gnulib.
	  Moved them back to src/ and now use them unconditionally.

2007-09-30  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* add --enable-debian flag to set defaults
	  for debian (sensible-browser, etc).
	* merged debian manpages (gitps, gitview, gitwipe, etc) upstream.
	* merged Bruce Sass's patches for manipulating .deb files
	* Updated RPM spec file. Warning: untested.
	* Remove CVS $Id$ tags as we are now using git.

2007-09-29  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* renamed package to gnu-interactive-tools.
	* added missing tty_end_cursorapp() calls.
	* dont wrap tty mode in tty_{start,end}cursorapp(), it leaves
	  the cursor bold when we exit in xterm.
	* src/panel.c(panel_compare_files): handle special files.

2007-09-28  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* updated config.{guess,sub}.
	* added .gitignore (that's git the vcs).

2006-10-21  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* src/tty.c(tty_put/get_screen): fix to work with > 8 vcs.
	* use ti/te codes which save/restore screen under xterm.
