@@ -1,7 +1,7 @@
 AUTOMAKE_OPTIONS = 1.9
 
 EXTRA_DIST = PLATFORMS PROBLEMS LSM.in version version.h.in\
-	     git.spec.in mkvcs prepare \
+	     gnuit.spec.in mkvcs prepare \
 	     m4/gnulib-tool.m4 m4/gnulib-cache.m4 \
 	     m4/absolute-header.m4 m4/gnulib-common.m4
 
@@ -13,4 +13,4 @@ html:
 	cd doc && $(MAKE) html
 
 dist-hook:
-	cp LSM git.spec $(distdir)
+	cp LSM gnuit.spec $(distdir)
